--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -285,6 +285,16 @@
 }
 
 .references {
+  sup {
+    margin-top: 1.25em;
+    display: block;
+    float: left;
+  }
+
+  span {
+    display: block;
+    padding-left: 1.25em;
+  }
   a {
     @extend %word-wrap;
   }
